--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "prefix": "!",
-  "token": "OTU1MDg3NTM3Mzc3MDA5NjY0.Glelgk.9bDZjSi6ySPD-ap9QwJ511YS0giaJdroDH7BiQ",
+  "token": "Your_Token",
   "permissions": "8",
   "application_id": "955087537377009664",
   "owners": [
